@@ -18,6 +18,11 @@
 * Revised post count caching.
 * Added the groups_user_is_member filter.
 * Additions to API methods.
+* Now updates the Categories widget post count to reflect the number of accessible posts for the viewing user, rendered as list or dropdown.
+* Now updates the Categories block post count to reflect the number of accessible posts for the viewing user.
+* Added the groups_post_access_filter_widget_categories_args filter.
+* Added the groups_post_access_filter_widget_categories_dropdown_args filter.
+* Added the groups_post_access_filter_get_terms filter.
 
 = 2.19.0 =
 * WordPress 6.4 compatible.
